--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,33 +1,65 @@
-.sliderContainer {
+.slider__container {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
+  @media screen and (min-width: 768px) {
+    align-items:flex-end;
+  }
 }
 
-.sliderWrapper {
+.slider__controls {
   width: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
   margin-bottom: 26px;
+  
+  @media screen and (min-width: 768px) {
+    position: relative;
+    width: 342px;
+    &::before{
+      content: "";
+        position: absolute;
+        display: block;
+        top: 0;
+        left: -9px;
+        width: 1px;
+        height: 100%;
+        background-color: #97D28B;
+    }
+  }
+  @media screen and (min-width: 1280px) {
+    width: 596px;
+    padding-left: 161px;
+  }
 }
 
-.sliderCounter {
-
+.slider__counter{ 
+  font-size: 28px; 
+  font-weight: 300;
+  letter-spacing: -0.04em;
 }
 
-.sliderArrows {
+.slider__counterQuantity{
+  color: rgba(23, 61, 51, 0.25);
+}
+
+.slider__arrows {
   display: flex;
   gap: 12px;
+  @media screen and (min-width:1280px) {
+      gap: 24px;
+    }
 }
 
-.sliderArrowWrap {
+.slider__arrowWrap {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 66px;
-  height: 66px;
+  padding: 14px;
   border-radius: 50%;
   background-color: transparent;
   stroke: #173D33;
@@ -39,56 +71,77 @@
     stroke: #97D28B;
     border-color: #97D28B;
   }
+
+  @media screen and (min-width:1280px) {
+    padding: 24px;
+  }
 }
 
-.sliderArrowLeft {
+.slider__arrowLeft {
   transform: rotate(-180deg);
 }
 
-.slidesContainer {
-  overflow: hidden;
-  width: 320px;
-  height: 318px;
-  position: relative;
+.slide__container {
+  position: relative; 
   display: flex;
-  gap: 24px;
-  @media screen and (min-width:768px) { 
-    width: 708px;
-    
+  overflow: hidden;
+  gap: 24px; 
+
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width:1280px) {
+    gap: 48px;
   }
 }
 
 .slide {
   height: 318px;
-  
-  /* position: absolute;  */
+  width: 320px;
   transition: transform 0.3s ease;
   display: flex;
-  flex-direction: column; 
- 
-
+  flex-direction: column;
+  @media screen and (min-width:768px) {
+    height: 322px;
+    width: 342px;
+  }
+  @media screen and (min-width:1280px) {
+    height: 506px;
+    width: 596px;
+  }
 }
 
-.slideImage{
-  width: 320px;
-  
+.slide__image{
+  width: 100%;
 }
 
-.slideInfo{
-  
-padding: 24px 12px 12px;
-background: #EAEDF1;
+.slide__info{  
+  padding: 24px 12px 12px;
+  background: #EAEDF1;
+  @media screen and (min-width: 1280px) {
+    padding: 36px 48px;
+  }
 }
 
-.slideTitleWrap{
+.slide__titleWrap{
   position: relative;
   display: flex;
-  height: 88px;
-  gap: 61px;
+  justify-content: space-between;
+  align-items: center;
+  height: 86px;
   padding-bottom: 20px;
+  @media screen and (min-width: 768px) {
+    height: 88px;
+    padding-bottom: 16px;
+  }
+  @media screen and (min-width: 1280px) {
+    height: 94px;
+    padding-bottom: 36px;
+  }
 }
 
-.slideTitleWrap::after {
+.slide__titleWrap::after {
   content: "";
   position: absolute;
   display: block;
@@ -99,15 +152,18 @@ background: #EAEDF1;
   background-color: #97D28B;
 }
 
-.slideTitle{
-  width: 175px;
+.slide__title{
+  width: 175px; 
   text-align: justify;
   font-size: 18px;
   line-height: normal;
   letter-spacing: -0.04em;
+  @media screen and (min-width: 768px) {
+    width: 230px;
+  }
 }
 
-.slideArrow{
+.slide__arrow{
   width: 60px;
   height: 60px;
   border-radius: 50%;
@@ -127,7 +183,7 @@ background: #EAEDF1;
   }
 }
 
-.slideDescriptionWrap{
+.slide__descriptionWrap{
   display: flex;
   justify-content: space-between;
   padding-top: 12px;
@@ -137,9 +193,7 @@ background: #EAEDF1;
   font-weight: 400;
   line-height: normal;
   letter-spacing: -0.48px;
+  @media screen and (min-width: 1280px) {
+    padding-top: 24px;
+  }
 }
-
-
-
-
-
