--- a/src/components/Electricity/Electricity.module.css
+++ b/src/components/Electricity/Electricity.module.css
@@ -74,6 +74,7 @@
   gap: 8px;
   @media screen and (min-width: 768px) {
     padding-top: 135px;
+    gap: 24px;
     &::before {
       height: 87px;
     }
@@ -86,8 +87,6 @@
       }
   }
 }
-
-
 
 .electricity__timerNumbers{
   color: #97D28B;  
