--- a/src/components/Cases/Cases.module.css
+++ b/src/components/Cases/Cases.module.css
@@ -29,6 +29,9 @@
     padding: 0 19px;
   }
 }
+.cases__titleWrap{
+  position: relative;
+}
 
 .cases__title {
   font-family: "Oswald";
@@ -39,6 +42,9 @@
   margin-bottom: 24px;
 
   @media screen and (min-width: 768px) {
+    position: absolute;
+    top: 0;
+    left: 0;
     font-size: 36px;
     width: 272px;
     margin-right: 82px;
