--- a/src/components/Faq/Faq.module.css
+++ b/src/components/Faq/Faq.module.css
@@ -30,6 +30,17 @@
   }
 }
 
+.faq__largeWrapper{
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+    @media screen and (min-width: 1280px) {
+   
+    }
+
+}
 .faq__title {
   /* width: 286px; */
   font-family: "Oswald";
@@ -42,6 +53,7 @@
   @media screen and (min-width: 768px) {
     font-size: 36px;
     margin-bottom: 0;
+    flex-grow: 1;
   }
 
   @media screen and (min-width: 1280px) {
@@ -49,20 +61,51 @@
   }
 }
 
-.faq__questions{
-padding-bottom: 36px;
-text-align: justify; 
-font-size: 14px;
-line-height: normal;
-letter-spacing: -0.04em;
+.faq__list{
+  padding-bottom: 36px;
+  text-align: justify; 
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: -0.04em;
+  @media screen and (min-width: 768px) {
+    width: 342px;
+    padding-bottom: 0;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 596px;
+  }
 }
 
-.faq__question {
-  font-size: 18px;
+.faq__item{
+position: relative;
+padding: 16px 0;
+  &:last-child{
+    padding-bottom: 0; 
+  }
+}
+
+.faq__item::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  ;
+  height: 1px;
+  background-color: #97D28B;
+}
+
+.faq__question {  
   display: flex;
-  align-items: center;
+  align-items: center; 
   gap: 8px;
   cursor: pointer;
+  font-size: 18px;
+  letter-spacing: -0.04em;
+  @media screen and (min-width: 768px) {
+    gap: 16px;
+  }
 }
 
 .faq__questionBtn{
@@ -71,31 +114,49 @@ letter-spacing: -0.04em;
   outline: none;
   background-color: transparent;
   cursor: pointer;
+  @media screen and (min-width: 768px) {
+  }
+}
+
+
+.faq__answer{
+  padding-left: 24px;
+  padding-top: 16px;
+  @media screen and (min-width: 768px) {
+    padding-left: 44px;
+  }
+}
+
+.faq__text{
+  text-align: center;
+  font-size: 18px;
+  letter-spacing: -0.04em;
+  margin-bottom: 12px;
 }
 
 .faq__btn {
   position: relative;
-    display: flex;
-    align-items: center;
-    width: 140px;
-    padding: 10px 16px;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    border-radius: 40px;
-    background-color: #97D28B;
-    line-height: normal;
-    letter-spacing: -0.04em;
-    transition: color 250ms var(--transition-time), background-color 250ms var(--transition-time);
+  display: flex;
+  align-items: center;
+  padding: 10px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  border: none;
+  border-radius: 40px;
+  background-color: #97D28B;
+  font-family: "Fira Sans";
+  font-size: 16px;
+  letter-spacing: -0.04em;
+  transition: color 250ms var(--transition-time), background-color 250ms var(--transition-time);
+  margin: 0 auto;
+ 
   @media screen and (min-width: 768px) {
-   
-
     &:hover {
       color: #97D28B;
       background-color: #173D33;
     }
   }
-
 }
 
 .faq__btn svg {
@@ -105,4 +166,23 @@ letter-spacing: -0.04em;
 
 .faq__btn:hover svg {
   fill: #97D28B;
+}
+
+.faq__mobile{
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.faq__large{
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    width: 342px;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 596px;
+    padding: 0 60px 0 137px;
+  }
 }
