--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -20,6 +20,7 @@
   @media screen and (min-width: 768px) {
     position: relative;
     width: 342px;
+    margin-bottom: 36px;
     &::before{
       content: "";
         position: absolute;
@@ -34,6 +35,7 @@
   @media screen and (min-width: 1280px) {
     width: 596px;
     padding-left: 161px;
+    margin-bottom: 114px;
   }
 }
 
