--- a/src/components/ContactUs/ContactUs.module.css
+++ b/src/components/ContactUs/ContactUs.module.css
@@ -51,3 +51,72 @@
     width: 491px;
   }
 }
+
+.contacts__wrapper{
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-top: 120px;
+    gap: 48px;
+  }
+}
+
+.contacts__details{
+  padding-top: 24px;
+  padding-bottom: 36px;
+  @media screen and (min-width: 768px) {
+     width: 342px;
+    }
+  
+    @media screen and (min-width: 1280px) {
+     width: 596px;
+    }
+
+}
+
+.contacts__detail{
+  display: flex;
+  flex-direction: column;
+
+  &:not(:last-child){
+    margin-bottom: 24px;
+  }
+}
+
+.contacts__detailTitle{
+  padding-bottom: 8px;
+}
+
+.contacts__detailLink {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  
+}
+.contacts__detailLink  svg {
+  stroke: #173D33;
+  transition: stroke 250ms var(--transition-time);
+}
+.contacts__detailLink:hover svg{
+  stroke: #97D28B;
+} 
+
+.contacts__socialWrap{
+  display: flex;
+  padding: 12px 0 0 12px;
+  gap: 32px;
+}
+.contacts__socialIcon {
+  color: #173D33;
+  stroke: #173D33;
+  transition: color 250ms var(--transition-time), stroke 250ms var(--transition-time);
+}
+
+.contacts__socialIcon:hover  {
+  stroke: #97D28B;
+  color: #97D28B;
+}
