--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,11 +1,11 @@
 .main{
-  padding: 110px 0 0;
+  padding: 222px 0 0;
   @media screen and (min-width: 768px) {
-    padding: 128px 0 0;
+    padding: 240px 0 0;
   }
 
   @media screen and (min-width: 1280px) {
-    padding: 176px 0 0;
+    padding: 264px 0 0;
   }
 }
 
@@ -13,6 +13,7 @@
   max-width: 480px;
   padding: 0 20px;
   margin: 0 auto;
+  
 
   @media screen and (min-width: 480px) {
     max-width: 480px;
@@ -118,10 +119,12 @@
   transform: rotate(45deg);
   background-color: #97D28B;
   stroke: #173D33;
+  z-index: -1;
 }
 
 .main__contacts{
   position: relative;
+  z-index: -1;
   display: flex;
   flex-direction: column;
   align-items: center;
