--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -87,6 +87,7 @@
 
 .header__navLink{
   display: none;
+  cursor: pointer;
   @media screen and (min-width: 768px) {
       position: relative;
         display: flex;
